@@ -759,3 +759,4 @@ Upgraded the OpenAds script installer to 2.4.0, which uses a completely differen
 Added a warning about NSCD to the configuration check page.
 Logging is now enabled when setting up clamd, and the socket directory created if needed.
 Added 5 and 15 minute load averages to system statistics.
+Details of a virtual server's resellers are now made available to pre and post virtual server change commands in the RESELLER_ environment variables.
